[package]
name = "norcim"
description = "norcim is a MQTT broker based on Micosft IoT Edge Platform broker open source code."
version = "0.1.0"
authors = ["xudesheng <xudesheng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
cfg-if = "1.0"
chrono = "0.4"
clap = "2.33"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "0.2", features = ["dns", "macros", "rt-threaded", "signal", "stream", "tcp", "time"] }
thiserror = "1.0"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.1"

edgelet-client = { path = "../edgelet-client", optional = true }
mqtt-bridge = { path = "../mqtt-bridge", optional = true }
mqtt-broker = { path = "../mqtt-broker" }
mqtt-edgehub = { path = "../mqtt-edgehub", optional = true }
mqtt-generic = { path = "../mqtt-generic", optional = true }

[dev-dependencies]
mockito = "0.25"
serde_json = "1.0"

[features]
default = ["generic"]
edgehub = ["mqtt-bridge", "mqtt-edgehub", "edgelet-client"]
generic = ["mqtt-generic"]
